# nnbar-calo-sim

./: CMakeLists.txt  G4History.macro  Lead glass blocks.ipynb  README.md  cmd.file  cmd2.file  config.h.in  cosmic_cmd.file  init_vis.mac  lead_glass_posx.csv  nnbar-calo-sim.cc  nnbar-calo-sim.in  setup.file  template.mac  test_cmd.file  vis.mac
include/: AbsorberHit.hh  AbsorberSD.hh  Analysis.hh  BarHit.hh  CVSD.hh  DetectorConstruction.hh  EventAction.hh  G4MCPLGenerator.hh  GenericSD.hh  HistoManager.hh  LightGuideSD.hh  NNbarHit.hh  NNbarRun.hh  NNbarStyle.h  PMTHit.hh  PMTSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction_CRY.hh  PrimaryGeneratorMessenger_CRY.hh  RunAction.hh  Scint_DetSD.hh  ScintillatorHit.hh  ScintillatorSD.hh  ShieldSD.hh  SiliconSD.hh  StackingAction.hh  SteppingAction.hh  TPCSD.hh  TrackerSD.hh  TrackingAction.hh  TubeSD.hh  WLSMaterials.hh  detSD.hh  pmtSD.hh  samplingSD.hh
lead_glass_position/: lead_glass_position.csv  lead_glass_position_fb.csv  lead_glass_posx.csv  lead_glass_posz.csv  non_axial.csv  non_axial_fb.csv  pmt_pos.csv
lead_glass_position/old_position/: pmt_pos.csv
macros/: nnbar-calo-sim.in
mcpl_files/: NNBAR_mfro_signal_GBL_jbar_50k_9001_event_length_info.csv
plots/: simPlots.C
src/: .DetectorConstruction.cc.swp  AbsorberHit.cc  AbsorberSD.cc  ActionInitialization.cc  BarHit.cc  CMakeCache.txt  CVSD.cc  DetectorConstruction.cc  EventAction.cc  G4History.macro  G4MCPLGenerator.cc  GenericSD.cc  HistoManager.cc  LightGuideSD.cc  Makefile  NNbarHit.cc  NNbarRun.cc  PMTHit.cc  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction_CRY.cc  PrimaryGeneratorMessenger.cc  PrimaryGeneratorMessenger_CRY.cc  RNGWrapper.cc  RunAction.cc  Scint_DetSD.cc  ScintillatorHit.cc  ScintillatorSD.cc  ShieldSD.cc  SiliconSD.cc  StackingAction.cc  SteppingAction.cc  TPCSD.cc  TrackerSD.cc  TrackingAction.cc  TubeSD.cc  WLSMaterials.cc  calo-sim.root  cmake_install.cmake  (+9 more)
src/include/: AbsorberSD.hh  ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  ElectricField.hh  EventAction.hh  NNbarHit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorSD.hh  TubeSD.hh
src/lead_glass_position/: lead_glass_position.csv
src/src/: AbsorberSD.cc  DetectorConstruction.cc  ElectricField.cc  EventAction.cc  G4MCPLGenerator.cc  NNbarHit.cc  PMTSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TPCSD.cc
tutorial/: README.md
